--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "contactplus",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A console contact diary application ",
   "preferGlobal": true,
-  "bin": "./index.js",
+  "bin": {
+    "contactplus": "./index.js"},
   "main": "index.js",
   "scripts": {
     "start": "babel-node -- index.js",
